@@ -1,3 +1,4 @@
+- fix stability issue (related to query parameters not reloading correctly between navigations
 v0.1.1 (2017-11-19)
 - fix never_stream = true
 - add support for secure login for /, /list, /kill (to enable, run dbm_setup.py ./gdrive.db username username_to_create and run dbm_setup.py ./gdrive.db password password_to_use)
